cmake_minimum_required(VERSION 3.17)
project(algorithm_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(pertemuan1-1 pertemuan_1/pertemuan1-soal1.cpp)
add_executable(pertemuan1-2 pertemuan_1/pertemuan1-soal2.cpp)
add_executable(pertemuan1-3 pertemuan_1/pertemuan1-soal3.cpp)
add_executable(pertemuan1-4 pertemuan_1/pertemuan1-soal4.cpp)
add_executable(pertemuan1-5 pertemuan_1/pertemuan1-soal5.cpp)